--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyAnimeApp</string>
+    <string name="new_user_sign">Нет аккаунта? <b>Зарегистрироваться</b></string>
+    <string name="LogString">Уже есть аккаунт? <b>Войти</b></string>
 </resources>
 
